docs(UI): Fix Logo on Mobile (#4280)
This is a fix for the position of the logo on home page when in
modile view.

--- a/docs_app/src/styles/1-layouts/_marketing-layout.scss
+++ b/docs_app/src/styles/1-layouts/_marketing-layout.scss
@@ -5,21 +5,9 @@
   align-items: center;
   position: absolute;
   width: 100%;
-  //background-color: $pink;
-  //min-height: 480px;
-  //height: 80vh;
-  //max-height: 560px;
   box-sizing: border-box;
   padding: 48px 48px 32px 48px;
   overflow: hidden;
-  //transform: skewY(8deg);
-  //transform-origin: 100%;
-  //
-  //@media (max-width: 480px) {
-  //  max-height: 486px;
-  //  padding-top: 40px;
-  //  transform: none;
-  //}
 
   .hero-title {
     display: inline-block;
@@ -50,7 +38,7 @@ section#intro {
     justify-content: center;
     width: 100%;
     max-width: 100vw;
-    padding: 40px 0 32px;
+    padding: 70px 0 32px;
 
     button {
       margin: 0;
@@ -112,8 +100,6 @@ section#intro {
   }
 
   .hero-logo {
-    margin-left: -30px;
-    margin-right: 30px;
     display: flex;
     width: 400px;
 
